...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/menu_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
...

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <ImageButton
                    android:id="@+id/search_btn"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
...

            <ImageButton
                android:id="@+id/favorites"
                android:layout_width="0dp"
                android:layout_height="40dp"
...

                        <TextView
                            android:id="@+id/category1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                <androidx.cardview.widget.CardView
                    android:id="@+id/allRecords"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
...

                        <TextView
                            android:id="@+id/category9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/category10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
