...
                    android:visibility="gone">

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/title"-->
<!--                        android:labelFor="@id/title_EditText"/>-->

                    <EditText
                        android:id="@+id/title_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
...

                </LinearLayout>
                <!--Title--> <!--Always Visible-->


                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:visibility="visible">
                    <EditText
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/username_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/FirstName"
                            android:inputType="text"
                            android:maxLines="1"
                            android:layout_marginTop="10dp"/>
...
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                            <EditText
                                android:id="@+id/password_EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="start"
                                android:inputType="textPassword"
                                android:hint="@string/masterPass"
                                android:paddingEnd="80dp"
...
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/btn_cancel_style"
                        android:onClick="cancelWarningMessage"
                        android:src="@drawable/ic_close" />

                    <ImageButton
                        android:id="@+id/saveBtn"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_weight="8"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/btn_style"
                        android:onClick="createNewAccount"
...
