...
            android:textColor="#fff"
            android:textSize="20sp"/>
    </LinearLayout>


    <android:com.andrognito.patternlockview.PatternLockView
        android:id="@+id/patternView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_gravity="center"
        correctStateColor="@color/colorCorrectLine"
        normalStateColor="@color/colorNormalLine"
...
