...
                    android:onClick="showPass"
                    android:visibility="gone" />
                <!--hide Button-->
            </RelativeLayout>

            <Button
                android:id="@+id/signIn"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="signIn"
                android:background="@drawable/btn_style"
...
